# graves-par

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md  graves-template.cvt  graves.py  graves.sh  install.sh  verifier-algo-selection.cvt  verifier-parallel-portfolio.cvt  verifier-parallel-portfolio.cvt.orig
actors/: 2ls-parallel-portfolio-3.yml  2ls.yml  cbmc-parallel-portfolio-3.yml  cbmc-resource-limitations.yml  cbmc.yml  cpa-seq-parallel-portfolio-3.yml  cpa-seq.yml  divine.yml  esbmc-kind-parallel-portfolio-3.yml  esbmc-kind.yml  goblint.yml  pesco.yml  symbiotic-parallel-portfolio-3.yml  uautomizer-parallel-portfolio-3.yml  ukojak-parallel-portfolio-3.yml  utaipan-parallel-portfolio-3.yml  verifier_resource.yml
cache/toolinfocache/: cbmc.py.etag  cpachecker.py.etag  divine4.py.etag  esbmc.py.etag  goblint.py.etag  pesco.py.etag  two_ls.py.etag
coveriteam/: __init__.py  util.py
coveriteam/actors/: misc.py
coveriteam/interpreter/: python_code_generator.py
coveriteam/language/: actor.py  actorconfig.py  artifact.py  atomicactor.py  composition.py  parallel_portfolio.py  utilactors.py
coveriteam/parser/: CoVeriLang.g4  CoVeriLangLexer.py  CoVeriLangParser.py  CoVeriLangVisitor.py  genParser.sh
cvt-output/1d9b84dd-ff4e-4a2e-bc1b-f6f36b162432/: execution_trace.xml
cvt-output/27821fa4-75c3-4248-bc12-595e28fc1b0c/: execution_trace.xml
cvt-output/2b68e41c-3be9-41f0-a07d-96f0f6fd16c2/: execution_trace.xml
cvt-output/437983c1-f454-4730-92b7-9d465bb35c67/: execution_trace.xml
cvt-output/59550f11-67b6-467f-9617-97834d16dbfd/: execution_trace.xml
cvt-output/87c9bf4f-0a5c-4724-924d-debb964518ac/: execution_trace.xml
cvt-output/8dc0baf5-dbf3-4d4f-bcb0-4b679379aaa7/: execution_trace.xml
cvt-output/ae2252d1-c564-480b-8092-f24980763b0c/: execution_trace.xml
cvt-output/afa21ab7-d3c1-492b-8749-a3032422158a/: execution_trace.xml
cvt-output/c30299a0-e50b-471b-a966-cb08d6f2f53f/: execution_trace.xml
cvt-output/ca427acf-2c53-411c-8f76-74e2387d713e/: execution_trace.xml
cvt-output/e6f1a3db-f894-43b9-a089-c9c19149fd56/: execution_trace.xml
lib/: BenchExec-3.10.dev0-py2.py3-none-any.whl  README.txt  Tempita-0.5.2-cp36-none-any.whl  antlr4_python3_runtime-4.8-cp36-none-any.whl  antlr4_python3_runtime-4.8-cp36-none-any.whl.license  certifi-2020.6.20-py2.py3-none-any.whl.license  chardet-3.0.4-py2.py3-none-any.whl.license  idna-2.10-py2.py3-none-any.whl.license  requests-2.24.0-py2.py3-none-any.whl.license  requirements.txt  urllib3-1.25.10-py2.py3-none-any.whl.license
predict/: CMakeLists.txt  dummy_model.pt  main.cpp
(+78 files in other folders)
